cluster/apps/media-server/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: seerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: seerr
  template:
    metadata:
      labels:
        app: seerr
    spec:
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5055
          resources:
            requests:
              cpu: "20m"
              memory: "256Mi"
            limits:
              memory: "384Mi"
          volumeMounts:
            - name: seerr-config
              mountPath: /app/config
      nodeSelector:
        kubernetes.io/hostname: nuc7pjyhn-cripple
      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: jellyseerr-config-pvc
