cluster/apps/media-server/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media-server
spec:
  selector:
    app: seerr
  ports:
    - name: http
      port: 5055
      targetPort: 5055
